# claude-studio-producer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER_SETUP.md  LICENSE  README.md  TRAINING_PIPELINE_SUMMARY.md  TRAINING_STATUS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_elevenlabs_lily.py  test_setup.py
.claude-studio/onboarding_sessions/: dalle.json  elevenlabs.json  google_tts.json
.claude/agents/: codebase-scout.md  spec-implementer.md  test-runner.md  training-analyst.md
.claude/commands/: produce.md  train.md
agents/: __init__.py  asset_analyzer.py  audio_generator.py  base.py  critic.py  document_ingestor.py  editor.py  producer.py  provider_onboarding.py  qa_verifier.py  script_writer.py  video_generator.py
cli/: __init__.py  agents.py  assemble.py  assets.py  combine.py  config.py  document.py  figures.py  kb.py  luma.py  memory.py  produce.py  produce_video.py  provider_cli.py  providers.py  qa.py  render.py  resume.py  secrets.py  status.py  test_provider.py  theme.py  themes.py  training.py  upload.py
core/: __init__.py  audio_utils.py  budget.py  claude_client.py  content_classifier.py  content_librarian.py  critic.py  dop.py  orchestrator.py  producer.py  provider_config.py  renderer.py  secrets.py  video_production.py
core/execution/: __init__.py  graph_builder.py
core/memory/: __init__.py  bootstrap.py  manager.py  multi_tenant_manager.py  namespace.py
core/models/: __init__.py  audio.py  content_library.py  document.py  edit_decision.py  execution.py  knowledge.py  memory.py  production_request.py  qa.py  render.py  seed_assets.py  structured_script.py  video_production.py
core/providers/: __init__.py  base.py  mock.py  qa_mock.py  runway.py
core/rendering/: __init__.py  mixer.py
core/training/: __init__.py  analysis.py  loss.py  models.py  synthesis.py  trainer.py  transcription.py
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: DOCKER_SETUP.md  _config.yml  architecture_current.md  architecture_future_strands.md  dev-journal.md  dev_notes.md  examples.md  ffmpeg.md  index.md  knowledge-base-deep-dive.md  providers.md  rendering.md  specs-evolution.md  specs-themes.md  specs-timeline.md
docs/cli/: README.md  assemble.md  assets.md  document.md  kb.md  produce-video.md  produce.md  providers.md  render.md  resume.md  training.md  upload.md  utilities.md
docs/specs/: AGENT_AUDIO_GENERATOR.md  AGENT_CRITIC.md  AGENT_EDITOR.md  AGENT_PRODUCER.md  AGENT_QA_VERIFIER.md  AGENT_SCRIPT_WRITER.md  AGENT_VIDEO_GENERATOR.md  ARCHITECTURE.md  ASSET_TRACKING_WORKFLOW.md  AUDIO_SYSTEM.md  AUDIO_VIDEO_ORCHESTRATION_PATCH.md  CLI_INTROSPECTION.md  CONTENT_AWARE_INGESTION.md  CONTENT_MODEL_EXPANSION.md  DOCKER_DEV_ENVIRONMENT.md  DOCUMENT_TO_VIDEO.md  KNOWLEDGE_TO_VIDEO.md  LUMA_PROVIDER_SPEC.md  MEMORY_AND_DASHBOARD.md  MULTI_PROVIDER_ORCHESTRATION.md  MULTI_TENANT_MEMORY_ARCHITECTURE.md  PODCAST_TRAINING_PIPELINE.md  PROJECT_VISION.md  PROVIDERS_COMPLETE.md  SEED_ASSETS.md  STRANDS_INTEGRATION.md  TESTING_AND_PROVIDERS.md  TRANSCRIPT_LED_VIDEO_PRODUCTION.md  UNIFIED_PRODUCTION_ARCHITECTURE.md  VIDEO_ASSEMBLY_ARCHITECTURE.md  index.md  multi_tenant_memory_architecture.md
examples/: README.md  e2e_production.py  e2e_production_strands.py  full_production.py  memory_cli.py  test_critic.py  test_producer.py  test_qa_verifier.py  test_script_writer.py  test_video_generator.py
experiments/: experiment_data.xlsx  experiment_tracker.py  experiments_analysis.py  intent_analysis.py
experiments/output/: prompt_evolution_20260110_101103.csv  provider_learnings_20260110_101103.csv
scripts/: assemble_rough_cut.py  dev.sh  estimate_costs.py  fix_run_videos.py  install_pkgs.sh  invoke.sh  migrate_runs.py  rebuild_long_term_memory.py  sync_metadata_to_memory.py  test_qa_vision.py
server/: __init__.py  config.py  main.py
server/models/: __init__.py  requests.py
server/routes/: __init__.py  agents.py  artifacts.py  memory.py  runs.py  workflows.py
server/templates/: base.html  dashboard.html  preview.html
skills/: __init__.py
skills/scene_analysis/: __init__.py  verify_quality.py
skills/video_generation/: __init__.py  generate_video.py
tests/: conftest.py
tests/integration/: test_dalle.py  test_elevenlabs.py  test_google_tts.py  test_mock_client.py  test_openai_tts.py  test_providers.py  test_unified_production.py  test_video_generator_with_provider.py
tests/mocks/: __init__.py  claude_client.py  fixtures.py
tests/unit/: test_assemble.py  test_asset_analyzer.py  test_assets_cli.py  test_audio_generator.py  test_audio_models.py  test_audio_utils.py  test_audio_video_mixer.py  test_budget.py  test_cli.py  test_content_librarian.py  (+22 more)
workflows/: __init__.py  orchestrator.py
(+38 files in other folders)
