[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-studio-producer"
version = "0.7.0"
description = "Budget-aware multi-agent video production orchestration using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT-0"}
authors = [
    {name = "Aaron Markham", email = "noreply@github.com"}
]
keywords = [
    "ai",
    "video-production",
    "multi-agent",
    "claude",
    "orchestration",
    "budget-optimization"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.34.0",
    "strands-agents>=0.1.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "lumaai>=0.1.0",
    "keyring>=25.0.0",
    "openai>=1.0.0",
    "elevenlabs>=1.0.0",
    "rouge-score>=0.1.2",
    "textstat>=0.7.0",
    "numpy>=1.24.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "jinja2>=3.1.0",
]
youtube = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2"
]

[project.urls]
Homepage = "https://github.com/aaronmarkham/claude-studio-producer"
Repository = "https://github.com/aaronmarkham/claude-studio-producer"
Issues = "https://github.com/aaronmarkham/claude-studio-producer/issues"
Documentation = "https://github.com/aaronmarkham/claude-studio-producer/tree/main/docs"

[project.scripts]
claude-studio = "cli:main"
cs = "cli:main"

[tool.setuptools]
packages = ["core", "agents", "cli", "server"]

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
